syntax = "proto3";
package canine_chain.filetree;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "canine_chain/filetree/params.proto";
import "canine_chain/filetree/files.proto";
import "canine_chain/filetree/pubkey.proto";

option go_package = "github.com/jackalLabs/canine-chain/x/filetree/types";

service Query {
  rpc Params(QueryParams) returns (QueryParamsResponse) {
    option (google.api.http).get = "/jackal/canine/filetree/params";
  }

  // Queries a File by address and owner_address.
  rpc File(QueryFile) returns (QueryFileResponse) {
    option (google.api.http).get =
        "/jackal/canine-chain/filetree/files/{address}/{owner_address}";
  }

  // Queries a list of File items.
  rpc AllFiles(QueryAllFiles) returns (QueryAllFilesResponse) {
    option (google.api.http).get = "/jackal/canine-chain/filetree/files";
  }

  // Queries a PubKey by address.
  rpc PubKey(QueryPubKey) returns (QueryPubKeyResponse) {
    option (google.api.http).get =
        "/jackal/canine-chain/filetree/pub_keys/{address}";
  }

  // Queries a list of PubKey items.
  rpc AllPubKeys(QueryAllPubKeys) returns (QueryAllPubKeysResponse) {
    option (google.api.http).get = "/jackal/canine-chain/filetree/pub_keys";
  }
}

message QueryParams {}

message QueryParamsResponse {
  Params params = 1 [ (gogoproto.nullable) = false ];
}

message QueryFile {
  string address = 1;
  string owner_address = 2;
}

message QueryFileResponse { Files file = 1 [ (gogoproto.nullable) = false ]; }


message QueryAllFiles {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllFilesResponse {
  repeated Files files = 1 [ (gogoproto.nullable) = false ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryPubKey { string address = 1; }

message QueryPubKeyResponse {
  Pubkey pub_key = 1 [ (gogoproto.nullable) = false ];
}

message QueryAllPubKeys {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPubKeysResponse {
  repeated Pubkey pub_key = 1 [ (gogoproto.nullable) = false ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
